--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer class="footer">
   <p>
-    &copy; 2020 Designed & Developed by
-    <a class="highlight-link" href="https://longpdo.github.io/" target="_blank" rel="noreferrer">
-      Long Do
+    &copy; 2020 All Rights Reserved
+    <a class="highlight-link" href="https://joeybose.github.io/" target="_blank" rel="noreferrer">
+      Joey Bose
     </a>
   </p>
   <p>
@@ -13,6 +13,10 @@
     and powered by
     <a class="highlight-link" href="https://pages.github.com/" target="_blank" rel="noreferrer">
       Github Pages
+    </a>
+    Theme used,
+    <a class="highlight-link" href="https://github.com/longpdo/neumorphism" target="_blank" rel="noreferrer">
+      Neumorphism
     </a>
   </p>
 </footer>
