--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -106,3 +106,20 @@
     </div>
   </div>
 </div>
+ <!--<head>-->
+  <!--<style>-->
+    <!--img {-->
+      <!--border-radius: 50%;-->
+      <!--height: 60%;-->
+      <!--width: 30%;-->
+      <!--overflow: hidden;-->
+      <!--display: block;-->
+      <!--position: relative;-->
+      <!--margin-left: auto;-->
+      <!--margin-right: auto;-->
+      <!--[>justify-content: right;<]-->
+      <!--[>align-items: right;<]-->
+    <!--}-->
+  <!--</style>-->
+ <!--</head>-->
+ <!--<img src="./assets/my_assets/joey_headshot_mila.jpg" alt="" class="rounded" >-->
